# WorkoutAPI

./: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 85bd244c1bd0_segunda.py
workout/: pyproject.toml
workout_api/: Makefile  main.py  routers.py
workout_api/atletas/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/configs/: database.py  settings.py
workout_api/contrib/: modelsC.py  schemasC.py
