[tool.poetry]
name = "academia"
version = "0.1.0"
description = ""
authors = ["Ruan Pablo <ruanpablocutrimramon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
SQLAlchemy = "^2.0.31"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
